# tau-sorting

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  SETUP.md  compare_Qrad_from_kappa.py  convert_odf_to_npy.py  deploy-to-1blu.sh  global_tau.h  group_derivatives.py  insturctions.md  kappa_band_reader.py  make-video.sh  planck.py  play_with_borders.ipynb  plot_atmosphere.py  plot_best_rms.py  plot_kap_mean_grid.py  plot_odf_samples.py  pyproject.toml  qrad_core.py  qrad_optimize.py  rte.py  tausort.c  tausort.py  test_build_group_specs_tree.py  test_build_split_band_index.py  test_derivatives.py  test_kappa_band_reader.py  test_kappa_dat_export.py  test_plot_kap_mean_grid.py  test_qrad_optimize.py  visual-test.txt
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
.pi/: settings.json
.pi/extensions/: protected-paths.ts  tausort-tools.ts
models/: F_SSD  G_SSD  K_SSD  M_SSD
paper/: README.md  aa_example.tex  ms.tex  refs.bib
papers/: voegler_bruls_schuessler_2004_aa421_741_full.html
scripts/: precommit.sh  regenerate_readme_plots.sh
webapp/: index.html  server.py
