[project]
name = "tausort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.0",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.5",
    "pre-commit>=4.5.1",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    ".jj",
    ".venv",
    "diff_binning",
    "__pycache__",
]

[tool.ruff.lint]
# Pragmatic starter set: pycodestyle errors/warnings, pyflakes, isort, pyupgrade.
# Keep this minimal so the first run is clean-ish; expand later as desired.
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # line-too-long: ruff format handles wrapping; warn-only is noisy here
    "E741",  # ambiguous variable name (l, I, O) -- common in physics code
    "UP007", # Optional/Union -> X | Y -- leave existing Annotated/Optional alone
]

[tool.ruff.lint.per-file-ignores]
# Allow `from x import *` and unused imports in notebooks/quick scripts if added later.
"test_*.py" = ["F401"]
# rte.py uses the radiative-transfer naming convention I / J / F (intensity, mean
# intensity, flux) for its Solver properties.
"rte.py" = ["E743"]

[tool.pyright]
# Consumed by basedpyright (drop-in compatible with Pyright config).
include = ["**/*.py"]
exclude = [
    ".venv",
    ".jj",
    "diff_binning",
    "__pycache__",
    "debug_tau_bin_*.json",
]
pythonVersion = "3.12"
typeCheckingMode = "standard"        # start permissive; flip to "strict" per-file as desired
venvPath = "."
venv = ".venv"
# Scientific code uses ndarray-typed args heavily — silence the noisiest defaults.
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
